JEKT-2394 - 🔁 Modified - Adding Release 3 Source Systems Jobs set for new Pipelines     - Job        - BW2_PIPELINE_JOB        - BBN_PIPELINE_JOB        - FSN_PIPELINE_JOB        - HM2_PIPELINE_JOB        - ATL_PIPELINE_JOB        - BBA_PIPELINE_JOB        - BBL_PIPELINE_JOB        - HCS_PIPELINE_JOB        - BWI_PIPELINE_JOB        - GEU_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -8769,18 +8769,30 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
+    - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_ATL
+    - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
+    - pipelines/SAP_01_MD_SLS_ORDR_ATL
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_5
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_INV_ATL
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
+    - pipelines/MD_SUP_7
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_01_MD_CUST_HCS
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-05-08 18:25:44'
+    modifiedAt: '2023-05-30 17:46:17'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
@@ -8798,22 +8810,35 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/SAP_01_MD_SLS_ORDR_BBA
+    - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
+    - pipelines/MD_DELV_1
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_RSEG
+    - pipelines/MD_PRCH_DELV_CNFRMS_4
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/SAP_MD_BILL_DOC_HDR_BBA_BBN
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_bba
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
+    - pipelines/SAP_MD_MATL_BBA_BBN
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_01_MD_CUST_HCS
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/MD_SUP_4
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:19:30'
-    modifiedAt: '2023-05-08 21:13:50'
+    modifiedAt: '2023-05-30 16:05:50'
     author: smille29@its.jnj.com
   jobs/DEV_BBL_PIPELINE_JOB:
     name: BBL_PIPELINE_JOB
@@ -8831,23 +8856,38 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
+    - pipelines/MD_DELV_1
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/SAP_MD_MATL_BBL
+    - pipelines/MD_PRCH_DELV_CNFRMS_5
+    - pipelines/MD_SUP_1
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_01_MD_SLS_ORDR_LINE
     - pipelines/SAP_01_MD_SHIP
+    - pipelines/SAP_RSEG
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/MD_BILL_DOC_HDR_BBL
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
+    - pipelines/SAP_01_MD_SLS_ORDR_BBL
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_4
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_01_MD_CUST_HCS
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:21:30'
-    modifiedAt: '2023-05-08 21:13:48'
+    modifiedAt: '2023-05-30 18:02:58'
     author: smille29@its.jnj.com
   jobs/DEV_BBN_PIPELINE_JOB:
     name: BBN_PIPELINE_JOB
@@ -8865,23 +8905,38 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
+    - pipelines/MD_DELV_1
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
+    - pipelines/MD_PRCH_DELV_CNFRMS_5
+    - pipelines/MD_SUP_1
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_01_MD_SHIP
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_bbn
+    - pipelines/SAP_RSEG
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/SAP_MD_BILL_DOC_HDR_BBA_BBN
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
+    - pipelines/SAP_MD_MATL_BBA_BBN
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_4
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_01_MD_CUST_HCS
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:22:48'
-    modifiedAt: '2023-05-08 18:30:01'
+    modifiedAt: '2023-05-30 18:08:16'
     author: smille29@its.jnj.com
   jobs/DEV_MRS_PIPELINE_JOB:
     name: MRS_PIPELINE_JOB
@@ -8932,23 +8987,36 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_DELV_1
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/MD_SUP_1
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_MD_MATL_HCS
     - pipelines/SAP_MD_MATL_INV_HCS
     - pipelines/SAP_01_MD_SHIP
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_hcs
+    - pipelines/MD_PRCH_DELV_CNFRMS_7
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_4
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_01_MD_CUST_HCS
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_01_MD_SLS_ORDR_HCS
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:25:32'
-    modifiedAt: '2023-05-08 18:27:17'
+    modifiedAt: '2023-05-30 19:09:27'
     author: smille29@its.jnj.com
   jobs/DEV_MBP_PIPELINE_JOB:
     name: MBP_PIPELINE_JOB
@@ -9114,20 +9182,33 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
     - pipelines/SAP_MD_MATL_INV_BWI
+    - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_bwi
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_6
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/MD_PRCH_DELV_CNFRMS_10
+    - pipelines/MD_SUP_6
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/MD_DELV_3
     - pipelines/SAP_MD_DELV_LINE_BWI_TAI
+    - pipelines/SAP_01_MD_SLS_ORDR_BWI
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_01_MD_CUST_HCS
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:42:32'
-    modifiedAt: '2023-05-08 18:30:11'
+    modifiedAt: '2023-05-30 18:24:56'
     author: smille29@its.jnj.com
   jobs/DEV_FSN_PIPELINE_JOB:
     name: FSN_PIPELINE_JOB
@@ -9145,21 +9226,33 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/SAP_01_MD_SLS_ORDR_BBA
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
+    - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_INV_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_5
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_FSN
+    - pipelines/MD_SUP_8
+    - pipelines/SAP_01_MD_CUST
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_01_MD_SHIP_FSN
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:44:07'
-    modifiedAt: '2023-05-08 18:27:40'
+    modifiedAt: '2023-05-30 18:39:46'
     author: smille29@its.jnj.com
   jobs/DEV_MTK_PIPELINE_JOB:
     name: MTK_PIPELINE_JOB
@@ -9281,21 +9374,36 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_geu
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_3
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
+    - pipelines/MD_SUP_5
+    - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/MD_PRCH_DELV_CNFRMS_6
+    - pipelines/SAP_RSEG
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
+    - pipelines/MD_DELV_6
+    - pipelines/SAP_01_MD_CUST
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:18:46'
-    modifiedAt: '2023-05-08 18:27:34'
+    modifiedAt: '2023-05-30 18:48:43'
     author: smille29@its.jnj.com
   jobs/DEV_BW2_PIPELINE_JOB:
     name: BW2_PIPELINE_JOB
@@ -9314,19 +9422,33 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/JDE_MD_MATL_BW2
+    - pipelines/JDE_MD_MATL_MVMT_HDR_BW2
+    - pipelines/MD_SUP_9
+    - pipelines/MD_DELV_9
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_01_MD_CUST
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
+    - pipelines/MD_PRCH_DELV_CNFRMS_11
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/jde_md_doc_itm_incm_invc
+    - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:19:52'
-    modifiedAt: '2023-05-08 18:30:05'
+    modifiedAt: '2023-05-30 18:16:06'
     author: smille29@its.jnj.com
   jobs/DEV_DEU_PIPELINE_JOB:
     name: DEU_PIPELINE_JOB
@@ -9970,22 +10092,37 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_hmd
     - pipelines/SAP_01_MD_BILL_DOC_HDR
     - pipelines/SAP_01_MD_MATL_INV
+    - pipelines/MD_SUP_11
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_10
+    - pipelines/SAP_01_MD_SLS_ORDR_HMD
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/MD_DELV_10
     - pipelines/SAP_MD_DELV_LINE_HM2
+    - pipelines/SAP_MD_MATL_MVMT_HDR_HMD
+    - pipelines/SAP_RSEG
+    - pipelines/SAP_MD_MATL_HM2
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_SLS_DOC_PTNR_FUNC_HM2
+    - pipelines/SAP_01_MD_SHIP_SVS
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
+    - pipelines/MD_PRCH_DELV_CNFRMS_12
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
+    - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_LOC_HMD
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: false
     createdAt: '2023-04-26 20:17:30'
-    modifiedAt: '2023-05-08 18:26:52'
+    modifiedAt: '2023-05-30 19:17:38'
     author: smille29@its.jnj.com
   jobs/JOB_MD_SLS_DOC_PTNR_FUNC_HM2:
     name: JOB_MD_SLS_DOC_PTNR_FUNC_HM2
