JEKT-2394 - 🔁 Modified - Updated 5 more Source Systems Jobs with Release 3 Pipelines     - Job        - P01_PIPELINE_JOB        - MBP_PIPELINE_JOB        - MRS_PIPELINE_JOB        - SVS_PIPELINE_JOB        - TAI_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -8954,22 +8954,37 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/MD_PRCH_DELV_CNFRMS_8
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/SAP_01_MD_SLS_ORDR_BBA
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_mrs
+    - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
+    - pipelines/MD_DELV_1
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/MD_SUP_1
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_RSEG
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_4
+    - pipelines/SAP_01_MD_CUST
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:23:52'
-    modifiedAt: '2023-05-08 18:25:50'
+    modifiedAt: '2023-05-30 20:10:57'
     author: smille29@its.jnj.com
   jobs/DEV_HCS_PIPELINE_JOB:
     name: HCS_PIPELINE_JOB
@@ -9034,23 +9049,36 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_MD_MATL_MBP
+    - pipelines/SAP_01_MD_PLNT
     - pipelines/SAP_MD_DELV_LINE_MBP
     - pipelines/SAP_01_MD_SHIP_MBP
+    - pipelines/MD_PRCH_DELV_CNFRMS_1
+    - pipelines/MD_DELV_8
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_INV_MBP
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_8
+    - pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
     - pipelines/MD_SLS_ORDR_LINE_MBP
+    - pipelines/SAP_01_MD_CUST
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:26:51'
-    modifiedAt: '2023-05-08 18:36:30'
+    modifiedAt: '2023-05-30 20:01:47'
     author: smille29@its.jnj.com
   jobs/DEV_P01_PIPELINE_JOB:
     name: P01_PIPELINE_JOB
@@ -9068,23 +9096,38 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/MD_SUP_2
+    - pipelines/MD_PRCH_DELV_CNFRMS_9
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_01_MD_SHIP
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_RSEG
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/MD_DELV_5
     - pipelines/SAP_MD_MATL_INV_P01
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
+    - pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_01_MD_CUST_HCS
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_P01
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:27:50'
-    modifiedAt: '2023-05-08 18:25:59'
+    modifiedAt: '2023-05-30 20:17:59'
     author: smille29@its.jnj.com
   jobs/DEV_SVS_PIPELINE_JOB:
     name: SVS_PIPELINE_JOB
@@ -9102,21 +9145,33 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_7
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
+    - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/SAP_MD_PRCH_DELV_CNFRMS_SVS
     - pipelines/SAP_MD_MATL_INV_P01
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_svs
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
+    - pipelines/MD_DELV_7
+    - pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
+    - pipelines/SAP_01_MD_CUST
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:30:48'
-    modifiedAt: '2023-05-08 18:36:38'
+    modifiedAt: '2023-05-30 20:25:16'
     author: smille29@its.jnj.com
   jobs/DEV_ANS_PIPELINE_JOB:
     name: ANS_PIPELINE_JOB
@@ -9332,7 +9387,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:16:30'
-    modifiedAt: '2023-05-08 18:25:54'
+    modifiedAt: '2023-05-30 20:26:24'
     author: smille29@its.jnj.com
   jobs/DEV_VST_PIPELINE_JOB:
     name: VST_PIPELINE_JOB
