JEKT-2191 SAP Pipeline executed for all src_sys 🔁 Modified     - Pipeline        - SAP_MD_SUP_PRCHSNG_ORG     - Dataset        - MD_SUP_PRCHSNG_ORG        - DS_SAP_01_LFM1

--- a/src/datasets/DS_SAP_01_LFM1/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_LFM1/pbt_aspects.yml
@@ -2,13 +2,6 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: A6AN8
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _deleted_
     type: string
     nullable: true
@@ -16,546 +9,378 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: A6APC
+  - name: MANDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6MCUP
+  - name: LIFNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6OBAP
+  - name: EKORG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6AIDP
+  - name: ERDAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6KCOP
+  - name: ERNAM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6DCAP
+  - name: SPERM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6DTAP
+  - name: LOEVM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6CRRP
+  - name: LFABC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6TXA2
+  - name: WAERS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EXR2
+  - name: VERKF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6HDPY
+  - name: TELF1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6TXA3
+  - name: MINBW
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EXR3
+  - name: ZTERM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6TAWH
+  - name: INCO1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6PCWH
+  - name: INCO2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6TRAP
+  - name: WEBRE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6SCK
+  - name: KZABS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6PYIN
+  - name: KALSK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6SNTO
+  - name: KZAUT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6AB1
+  - name: EXPVZ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6FLD
+  - name: ZOLLA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6SQNL
+  - name: MEPRF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6CRCA
+  - name: EKGRP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6AYPD
+  - name: XERSY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6APPD
+  - name: PLIFZ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ABAM
+  - name: MRPPP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ABA1
+  - name: LFRHY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6APRC
+  - name: LIBES
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6MINO
+  - name: LIPRE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6MAXO
+  - name: LISER
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6AN8R
+  - name: PRFRE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6BADT
+  - name: NRGEW
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6CPGP
+  - name: BOIND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ORTP
+  - name: BLIND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6INMG
+  - name: KZRET
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6HOLD
+  - name: SKRIT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ROUT
+  - name: BSTAE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6STOP
+  - name: RDPRF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ZON
+  - name: MEGRU
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6ANCR
+  - name: VENSL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6CARS
+  - name: BOPNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6DEL1
+  - name: XERSR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6DEL2
+  - name: EIKTO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6LTDT
+  - name: ABUEB
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6FRTH
+  - name: PAPRF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6INVC
+  - name: AGREL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6PLST
+  - name: XNBWY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6WUMD
+  - name: VSBED
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6VUMD
+  - name: LEBRE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6PRP5
+  - name: BOLRE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDPM
+  - name: UMSAE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDCI
+  - name: ACTIVITY_PROFIL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDII
+  - name: TRANSPORT_CHAIN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: A6EDQD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6EDAD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6EDF1
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6EDF2
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6VI01
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6VI02
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6VI03
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6VI04
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6VI05
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6MNSC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6ATO
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6RVNT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6URCD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6URDT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6URAT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6URAB
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6URRF
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6USER
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6PID
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6JOBN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6UPMJ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6UPMT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6ASN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6CRMD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: A6AVCH
+  - name: STAGING_TIME
     type: string
     nullable: true
     metadata:
